@@ -1,3 +1,7 @@
+2009-10-18  Peter Bloomfield
+
+	* C/balsa.xml: fix errors and update.
+
 2009-10-08  Peter Bloomfield
 
 	* C/balsa.xml: fix out-of-date address book help.
